--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="src\Flame\math\Plane.h" />
     <ClInclude Include="src\Flame\math\Ray.h" />
     <ClInclude Include="src\Flame\math\Sphere.h" />
+    <ClInclude Include="src\Flame\math\Transform.h" />
     <ClInclude Include="src\Flame\math\Triangle.h" />
     <ClInclude Include="src\Flame\math\TriangleObject.h" />
     <ClInclude Include="src\Flame\render\Framebuffer.h" />
@@ -51,6 +52,7 @@
     <ClCompile Include="src\Flame\math\Bvh.h" />
     <ClCompile Include="src\Flame\math\Cube.cpp" />
     <ClCompile Include="src\Flame\math\Sphere.cpp" />
+    <ClCompile Include="src\Flame\math\Transform.cpp" />
     <ClCompile Include="src\Flame\math\TriangleObject.cpp" />
     <ClCompile Include="src\Flame\render\Framebuffer.cpp" />
     <ClCompile Include="src\Flame\window\events\MouseScrollWindowEvent.h" />
