--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <ClCompile Include="src\Flame\math\Bvh.cpp" />
     <ClCompile Include="src\Flame\math\Plane.cpp" />
+    <ClCompile Include="src\Flame\math\Triangle.cpp" />
     <ClCompile Include="src\Flame\objects\PlaneObject.cpp" />
     <ClCompile Include="src\Flame\render\Camera.cpp" />
     <ClCompile Include="src\Flame\layers\Scene.cpp" />
