Add DxRenderer. Add clear and present code. Add resize handling. Start writing drawing code.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -65,6 +65,8 @@
     <ClCompile Include="src\Flame\objects\TriangleObject.cpp" />
     <ClCompile Include="src\Flame\objects\SphereObject.cpp" />
     <ClCompile Include="src\Flame\render\DxContext.cpp" />
+    <ClCompile Include="src\Flame\render\DxRenderer.cpp" />
+    <ClCompile Include="src\Flame\render\DxRenderer.h" />
     <ClCompile Include="src\Flame\render\Framebuffer.cpp" />
     <ClCompile Include="src\Flame\render\Renderer.cpp" />
     <ClCompile Include="src\Flame\utils\ParallelExecutor.cpp" />
