--- a/src/Project/CMakeLists.txt
+++ b/src/Project/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/src/ConsoleLib
   ${CMAKE_SOURCE_DIR}/src/Engine
   ${CMAKE_SOURCE_DIR}/vendor/glm
+  ${CMAKE_SOURCE_DIR}/vendor/assimp/include
 )
 
 add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})
@@ -24,5 +25,6 @@ target_link_libraries(${PROJECT_NAME}
   PRIVATE d3dcompiler
 
   PRIVATE glm
+  PRIVATE assimp
 )
 
