Add "CMAKE_BUILD_TYPE is empty" warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,11 @@ add_subdirectory(src/ConsoleLib)
 add_subdirectory(src/Engine)
 add_subdirectory(src/Project)
 
-message(INFO "LOOOOOOOOOOOOOOOL")
-message(INFO "${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/Assets")
+if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+  message(SEND_ERROR "CMAKE_BUILD_TYPE is empty - can't copy resources.")
+  message(SEND_ERROR "Set it manually or if you use VSCode try to set the generator to Ninja in Extensions -> CMakeTools -> Extension Settings -> Generator")
+endif()
+
 add_custom_target(copy_resources ALL
   COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different "${PROJECT_SOURCE_DIR}/Assets" "${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/Assets"
   COMMENT "Copying resources to the build directory..."
