--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -2,12 +2,16 @@ cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 project(Engine)
 
 file(GLOB_RECURSE SRC_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
+list(APPEND SRC_FILES
+  ${CMAKE_SOURCE_DIR}/vendor/directxtex/DDSTextureLoader/DDSTextureLoader11.cpp
+)
 
 include_directories(
   ${CMAKE_SOURCE_DIR}/src/Engine
   ${CMAKE_SOURCE_DIR}/vendor/glm
   ${CMAKE_SOURCE_DIR}/vendor/assimp/include
   ${CMAKE_BINARY_DIR}/vendor/assimp/include
+  ${CMAKE_SOURCE_DIR}/vendor/directxtex
 )
 
 add_library(${PROJECT_NAME} ${SRC_FILES})
