--- a/src/Project/CMakeLists.txt
+++ b/src/Project/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/vendor/glm
   ${CMAKE_SOURCE_DIR}/vendor/assimp/include
   ${CMAKE_BINARY_DIR}/vendor/assimp/include
+  ${CMAKE_SOURCE_DIR}/vendor/directxtex
 )
 
 add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})
@@ -27,5 +28,6 @@ target_link_libraries(${PROJECT_NAME}
 
   PRIVATE glm
   PRIVATE assimp
+  PRIVATE DirectXTex
 )
 
